increase timeout for build images

--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -10,6 +10,7 @@ jobs:
 ################################################################################
   - job: linux_dotnet_projects
 ################################################################################
+    timeoutInMinutes: 120
     displayName: LinuxDotnet
     pool:
       vmImage: 'ubuntu-16.04'
