update authors for watchdog

--- a/edge-hub/watchdog/linux/Cargo.toml
+++ b/edge-hub/watchdog/linux/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "watchdog"
 version = "0.1.0"
-authors = ["Andrew Smith <als5ev@virginia.edu>"]
+authors = ["Azure IoT Edge Devs"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 nix = "0.17.0"
