--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "^0.12"
 bindgen = "^0.54"
 bytes = "^0.5"
+fs2 = "^0.4"
 hyper = "^0.13"
 hyper-tls = "^0.4"
+libsodium-sys = "^0.2"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
+socket2 = "^0.3"
+zeroize = "^1.1"
