--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,12 @@ edition = "2018"
 base64 = "^0.12"
 bindgen = "^0.54"
 bytes = "^0.5"
+edgelet-http = { path = "extern/iotedge/edgelet/edgelet-http" }
 fs2 = "^0.4"
 hyper = "^0.13"
 hyper-tls = "^0.4"
 libsodium-sys = "^0.2"
+log = "0.4"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
-socket2 = "^0.3"
 zeroize = "^1.1"
