--- a/edge-hub/docker/linux/arm64v8/Dockerfile
+++ b/edge-hub/docker/linux/arm64v8/Dockerfile
@@ -1,14 +1,14 @@
 ARG base_tag=1.0.5-linux-arm64v8
 FROM azureiotedge/azureiotedge-hub-base:${base_tag}
 
-ADD ./watchdog/arm64/watchdog /usr/local/bin/watchdog
-ADD ./mqtt/arm64/mqttd /usr/local/bin/mqttd
+ADD ./watchdog/target/aarch64-unknown-linux-gnu/release/watchdog /usr/local/bin/watchdog
+ADD ./mqttd/target/aarch64-unknown-linux-gnu/release/mqttd /usr/local/bin/mqttd
 
 ARG EXE_DIR=.
 
 WORKDIR /app
 
-COPY $EXE_DIR/ ./
+COPY $EXE_DIR/ ./edge-hub
 
 # Set broker log level
 ENV RUST_LOG=info
