--- a/builds/misc/templates/consolidate-edgehub-artifacts.yaml
+++ b/builds/misc/templates/consolidate-edgehub-artifacts.yaml
@@ -2,7 +2,7 @@
 # EdgeHub's dotnet publish folder will serve as a minimal build context for the image
 parameters:
   edgehub.dotnet.artifacts.path: 'publish/Microsoft.Azure.Devices.Edge.Hub.Service'
-  mqttd.artifacts.path: 'mqttd/target/'
+  mqttd.artifacts.path: 'mqtt/target/'
   watchdog.artifacts.path: 'edge-hub/watchdog/linux/target'
   all.artifacts.path: 'publish/edge-hub'
 
@@ -12,8 +12,8 @@ steps:
       mkdir -p $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/mqttd
       mkdir -p $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/watchdog
 
-      cp  ${{ parameters['watchdog.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/watchdog
-      cp  ${{ parameters['mqttd.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/mqttd
-      mv  ${{ parameters['edgehub.artifacts.path'] }}/docker $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}
-      cp  ${{ parameters['edgehub.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}
+      cp  -r ${{ parameters['watchdog.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/watchdog
+      cp  -r ${{ parameters['mqttd.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/mqttd
+      mv  $(Build.BinariesDirectory)/${{ parameters['edgehub.artifacts.path'] }}/docker $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}
+      cp  -r $(Build.BinariesDirectory)/${{ parameters['edgehub.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}
     displayName: Copy edgehub, watchdog, and broker artifacts to single folder
