--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ edition = "2018"
 base64 = "~0.12"
 bytes = "~0.5"
 hyper = "~0.13"
-hyper-tls = "~0.4"
 hyperlocal = "~0.7"
 libc = "~0.2"
 libsodium-sys = "~0.2"
@@ -19,4 +18,4 @@ log = "0.4"
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 tokio = { version = "~0.2", features = ["macros"] }
-zeroize = "~1.1"
+# zeroize = "~1.1"
