--- a/builds/misc/templates/consolidate-edgehub-artifacts.yaml
+++ b/builds/misc/templates/consolidate-edgehub-artifacts.yaml
@@ -1,7 +1,7 @@
 # This template will move the mqttd and watchdog artifacts into the EdgeHub dotnet publish folder
 # EdgeHub's dotnet publish folder will serve as a minimal build context for the image
 parameters:
-  edgehub.dotnet.artifacts.path: 'publish/Microsoft.Azure.Devices.Edge.Hub.Service'
+  dotnet.artifacts.path: 'publish/Microsoft.Azure.Devices.Edge.Hub.Service'
   mqttd.artifacts.path: 'mqtt/target/'
   watchdog.artifacts.path: 'edge-hub/watchdog/linux/target'
   all.artifacts.path: 'publish/edge-hub'
@@ -14,6 +14,6 @@ steps:
 
       cp  -r ${{ parameters['watchdog.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/watchdog
       cp  -r ${{ parameters['mqttd.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/mqttd
-      mv  $(Build.BinariesDirectory)/${{ parameters['edgehub.artifacts.path'] }}/docker $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}
-      cp  -r $(Build.BinariesDirectory)/${{ parameters['edgehub.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}
+      mv  $(Build.BinariesDirectory)/${{ parameters['dotnet.artifacts.path'] }}/docker $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}
+      cp  -r $(Build.BinariesDirectory)/${{ parameters['dotnet.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}
     displayName: Copy edgehub, watchdog, and broker artifacts to single folder
