--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -50,7 +50,7 @@ jobs:
         parameters:
           name: Edge Hub
           imageName: azureiotedge-hub
-          project: Microsoft.Azure.Devices.Edge.Hub.Service
+          project: edge-hub
 
       # Simulated Temperature Sensor
       - template: templates/image-linux.yaml
