--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,5 @@ percent-encoding = "~2.1"
 rusqlite = "~0.23"
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
-tokio = { version = "~0.2", features = ["macros", "rt-util"] }
+tokio = { version = "~0.2", features = ["macros"] }
 # zeroize = "~1.1"
