update display name

--- a/builds/misc/images-release.yaml
+++ b/builds/misc/images-release.yaml
@@ -608,7 +608,7 @@ jobs:
 ################################################################################
   - job: manifest
 ################################################################################
-    displayName: Manifest
+    displayName: Publish Manifest Images
     pool:
       vmImage: 'ubuntu-16.04'
     dependsOn:
