--- a/edge-hub/test/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.Test/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.Test.csproj
+++ b/edge-hub/test/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.Test/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.Test.csproj
@@ -1,6 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <Import Project="..\..\..\netcoreappVersion.props" />
+
+  <PropertyGroup>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <Configurations>Debug;Release;CheckInBuild</Configurations>
+    <HighEntropyVA>true</HighEntropyVA>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
@@ -14,5 +19,8 @@
     <ProjectReference Include="..\..\src\Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter\Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.csproj" />
     <ProjectReference Include="..\..\src\Microsoft.Azure.Devices.Edge.Hub.Mqtt\Microsoft.Azure.Devices.Edge.Hub.Mqtt.csproj" />
   </ItemGroup>
-
+  <PropertyGroup>
+    <CodeAnalysisRuleSet>..\..\..\stylecop.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>  
+  <Import Project="..\..\..\stylecop.props" />
 </Project>
