--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,11 @@ base64 = "~0.12"
 bytes = "~0.5"
 hyper = "~0.13"
 hyperlocal = "~0.7"
-# ks-client-async = { path = "extern/libiothsm2/ks-client-async" }
 libc = "~0.2"
-libsodium-sys = "~0.2"
-log = "0.4"
+# log = "0.4"
 percent-encoding = "~2.1"
-rusqlite = "~0.23"
+ring = "~0.16"
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 tokio = { version = "~0.2", features = ["macros"] }
-# zeroize = "~1.1"
+zeroize = { version = "~1.1", features = ["zeroize_derive"] }
