--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,12 @@ edition = "2018"
 [dependencies]
 base64 = "~0.12"
 bytes = "~0.5"
-futures = "~0.3"
 hyper = "~0.13"
 hyperlocal = "~0.7"
 libc = "~0.2"
 # log = "0.4"
 percent-encoding = "~2.1"
-ring = "~0.16"
+ring = { version = "~0.16", features = ["alloc", "std"] }
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 tokio = { version = "~0.2", features = ["macros"] }
