Use version as name

--- a/builds/misc/images-release.yaml
+++ b/builds/misc/images-release.yaml
@@ -1,3 +1,4 @@
+name: $(version)
 jobs: 
 ################################################################################
   - job: linux_dotnet_projects
