--- a/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
+++ b/edge-hub/core/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
@@ -29,13 +29,13 @@
     "enabled": true,
     "port": 443
   },
-  "#\"EdgeModuleHubServerCertificateFile\"": "iot-edge-device-ca-edgehubCA.cert.pfx",
-  "#\"EdgeModuleHubServerCAChainCertificateFile\"": "C:\\temp\\edgehub_certs",
-  "EdgeHubDevServerCertificateFile": "C:\\temp\\edgehub_certs\\iot-edge-device-ca-edgehubCA-full-chain.cert.pem",
-  "EdgeHubDevServerPrivateKeyFile": "C:\\temp\\edgehub_certs\\iot-edge-device-ca-edgehubCA.key.pem",
-  "EdgeHubDevTrustBundleFile": "C:\\temp\\edgehub_certs\\iot-edge-device-ca-edgehubCA.cert.pem",
+  "authAgentSettings": {
+    "enabled": true,
+    "port": 7120,
+    "baseUrl": "/authenticate/"
+  },
   "IotHubConnectionPoolSize": 1,
-  "IotHubConnectionString": "HostName=ancan061901.private.azure-devices-int.net;DeviceId=richmaEdge0;ModuleId=$edgeHub;SharedAccessKey=KCv7jXR55tiAGsz3dGb2JgFsx0H+atA7e26Eu8aTJCI=",
+  "IotHubConnectionString": "",
   "mqttTopicNameConversion": {
     "InboundTemplates": [
       "devices/{deviceId}/messages/events/{params}/",
@@ -65,7 +65,7 @@
   "storeAndForward": {
     "timeToLiveSecs": "-1"
   },
-  "RuntimeLogLevel": "debug",
+  "RuntimeLogLevel": "info",
   "ClientCertAuthEnabled": true,
   "OptimizeForPerformance": true,
   "ConnectivityCheckFrequencySecs": 300,
@@ -78,11 +78,5 @@
   "AuthenticationMode": "CloudAndScope",
   "DeviceScopeCacheRefreshRateSecs": 3600,
   "CloudConnectionIdleTimeoutSecs": 3600,
-  "CloseCloudConnectionOnIdleTimeout": true,
-    "authAgentSettings": {
-    "enabled": false,
-    "port": 7120,
-    "baseUrl": "/authenticate/"
-  },
-  "UpstreamProtocol": "Amqp"
+  "CloseCloudConnectionOnIdleTimeout": true
 }
