broker debug level logs

--- a/edge-hub/docker/linux/amd64/Dockerfile
+++ b/edge-hub/docker/linux/amd64/Dockerfile
@@ -30,7 +30,7 @@ WORKDIR /app
 COPY $EXE_DIR/ ./
 
 # Set broker log level
-ENV RUST_LOG=info
+ENV RUST_LOG=debug
 
 # Expose MQTT, AMQP and HTTPS ports	
 EXPOSE 1883/tcp
