--- a/edgelet/contrib/config/linux/debian/config.yaml
+++ b/edgelet/contrib/config/linux/debian/config.yaml
@@ -224,6 +224,20 @@ agent:
 hostname: "<ADD HOSTNAME HERE>"
 
 ###############################################################################
+# Nested Edge parent hostname
+###############################################################################
+#
+# Optional. This entry should only be specified for the host name of the 
+# parent edge device for nested edge sceanrio. This value is injected into 
+# Edge Agent and Edge Hub modules as environment value 'IOTEDGE_GATEWAYHOSTNAME',
+# and injected into custom module as environment value 'IOTEDGE_PARENTHOSTNAME'.
+# Regardless of case the parent_hostname is specified below, a lower case value
+# is used.
+###############################################################################
+
+#parent_hostname: "<ADD PARENT HOSTNAME HERE>"
+
+###############################################################################
 # Watchdog settings
 ###############################################################################
 #
