address comments, fix cargo fmt and clippy

--- a/edgelet/contrib/config/linux/config.yaml
+++ b/edgelet/contrib/config/linux/config.yaml
@@ -235,9 +235,8 @@ hostname: "<ADD HOSTNAME HERE>"
 # Optional. This entry should only be specified for the host name of the 
 # parent edge device for nested edge sceanrio. This value is injected into 
 # Edge Agent and Edge Hub modules as environment value 'IOTEDGE_GATEWAYHOSTNAME',
-# and injected into custom module as environment value 'IOTEDGE_PARENTHOSTNAME'.
-# Regardless of case the parent_hostname is specified below, a lower case value
-# is used.
+# and injected into other module as environment value 'IOTEDGE_PARENTHOSTNAME'.
+# The parent_hostname value is converted to lower case before it is used.
 ###############################################################################
 
 #parent_hostname: "<ADD PARENT HOSTNAME HERE>"
