--- a/edgelet/edgelet-iothub/Cargo.toml
+++ b/edgelet/edgelet-iothub/Cargo.toml
@@ -10,6 +10,7 @@ base64 = "0.9"
 chrono = "0.4"
 failure = "0.1"
 futures = "0.1"
+log = "0.4"
 percent-encoding = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
