--- a/builds/e2e/templates/e2e-setup.yaml
+++ b/builds/e2e/templates/e2e-setup.yaml
@@ -86,6 +86,11 @@ steps:
       '$(System.ArtifactsDirectory)/$(az.pipeline.images.artifacts)/artifactInfo.txt'
     $imageId = ($imageId -split '=')[1]
     $imageTag = "$imageId-$(os)-$(arch)"
+
+    echo "edgeAgentImage = $imagePrefix-agent:$imageTag";
+    echo "edgeHubImage = $imagePrefix-hub:$imageTag";
+    echo "edgeAgentBootstrapImage = $imagePrefix-agent-bootstrap-e2e-$(os)-$(arch)";
+
     $context = @{
       dpsIdScope = '$(dps.idScope)'
       edgeAgentImage = "$imagePrefix-agent:$imageTag";
