--- a/builds/e2e/templates/e2e-run.yaml
+++ b/builds/e2e/templates/e2e-run.yaml
@@ -15,7 +15,15 @@ steps:
     }
     else
     {
-      sudo --preserve-env dotnet vstest $testFile --logger:trx
+      # Unfortunately CentOs has some failing test that need to be worked on.
+      if ($(Agent.Name).Contains('centos'))
+      {
+        sudo --preserve-env dotnet vstest $testFile --logger:trx --filter "TestCategory=CentOsSafe"
+      }
+      else
+      {
+        sudo --preserve-env dotnet vstest $testFile --logger:trx
+      }
     }
   displayName: Run tests
   env:
