--- a/builds/e2e/templates/e2e-run.yaml
+++ b/builds/e2e/templates/e2e-run.yaml
@@ -18,7 +18,7 @@ steps:
       # Unfortunately CentOs has some failing test that need to be worked on.
       if ('$(Agent.Name)'.Contains('centos'))
       {
-        sudo --preserve-env dotnet vstest $testFile --logger:trx --filter "TestCategory=CentOsSafe"
+        sudo --preserve-env dotnet test $testFile --logger:trx --filter "TestCategory=CentOsSafe"
       }
       else
       {
