--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ hyperlocal = "~0.7"
 libc = "~0.2"
 # log = "0.4"
 percent-encoding = "~2.1"
+regex = "~1.3"
 ring = { version = "~0.16", features = ["std"] }
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
