--- a/builds/misc/templates/consolidate-edgehub-artifacts.yaml
+++ b/builds/misc/templates/consolidate-edgehub-artifacts.yaml
@@ -3,6 +3,7 @@
 parameters:
   dotnet.artifacts.path: 'publish/Microsoft.Azure.Devices.Edge.Hub.Service'
   mqttd.artifacts.path: 'mqtt/target/'
+  mqttd.config.path: 'mqtt/mqtt-broker/config/production.json'
   watchdog.artifacts.path: 'edge-hub/watchdog/linux/target'
   all.artifacts.path: 'publish/edge-hub'
 
@@ -13,7 +14,11 @@ steps:
       mkdir -p $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/watchdog
 
       cp  -r ${{ parameters['watchdog.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/watchdog
+
       cp  -r ${{ parameters['mqttd.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/mqttd
+      cp ${{ parameters['mqttd.config.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}/mqttd
+
       mv  $(Build.BinariesDirectory)/${{ parameters['dotnet.artifacts.path'] }}/docker $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}
       cp  -r $(Build.BinariesDirectory)/${{ parameters['dotnet.artifacts.path'] }} $(Build.BinariesDirectory)/${{ parameters['all.artifacts.path'] }}
+
     displayName: Copy edgehub, watchdog, and broker artifacts to single folder
