--- a/builds/misc/templates/build-broker-watchdog.yaml
+++ b/builds/misc/templates/build-broker-watchdog.yaml
@@ -4,17 +4,17 @@ steps:
     displayName: Build watchdog - amd64
     inputs:
       filePath: scripts/linux/cross-platform-rust-build.sh
-      arguments: --os ubuntu18.04 --arch amd64 --build-path edge-hub/watchdog/linux
+      arguments: --os ubuntu18.04 --arch amd64 --build-path edge-hub/watchdog
   - task: Bash@3
     displayName: Build watchdog - arm32
     inputs:
       filePath: scripts/linux/cross-platform-rust-build.sh
-      arguments: --os ubuntu18.04 --arch arm32v7 --build-path edge-hub/watchdog/linux
+      arguments: --os ubuntu18.04 --arch arm32v7 --build-path edge-hub/watchdog
   - task: Bash@3
     displayName: Build watchdog - arm64
     inputs:
       filePath: scripts/linux/cross-platform-rust-build.sh
-      arguments: --os ubuntu18.04 --arch aarch64 --build-path edge-hub/watchdog/linux
+      arguments: --os ubuntu18.04 --arch aarch64 --build-path edge-hub/watchdog
   # Build broker
   - task: Bash@3
     displayName: Build MQTT Broker - amd64
