clean up dockerfiles

--- a/edge-hub/docker/linux/amd64/Dockerfile
+++ b/edge-hub/docker/linux/amd64/Dockerfile
@@ -29,7 +29,7 @@ WORKDIR /app
 COPY $EXE_DIR/ ./
 
 # Set broker log level
-ENV RUST_LOG=debug
+ENV RUST_LOG=info
 
 # Expose MQTT, AMQP and HTTPS ports	
 EXPOSE 1883/tcp
@@ -41,4 +41,4 @@ USER edgehubuser
 
 CMD echo "$(date --utc +"%Y-%m-%d %H:%M:%S %:z") Starting Edge Hub" && \
     cd /tmp/mqtt && \
-    /usr/local/bin/watchdog -c /tmp/mqtt/config/config.json
+    /usr/local/bin/watchdog
