--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ base64 = "~0.12"
 bytes = "~0.5"
 hyper = "~0.13"
 hyperlocal = "~0.7"
+iotedge-aad = { git = "https://github.com/R25l84IHeXjIxy6HO1QXn0y0Dq9mt8EN/iotedge-aad" }
 libc = "~0.2"
 # log = "0.4"
 percent-encoding = "~2.1"
@@ -19,6 +20,7 @@ ring = { version = "~0.16", features = ["std"] }
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 tokio = { version = "~0.2", features = ["macros"] }
+toml = "~0.5"
 zeroize = { version = "~1.1", features = ["zeroize_derive"] }
 
 rocksdb = { version = "~0.14", optional = true }
