--- a/builds/checkin/edgelet.yaml
+++ b/builds/checkin/edgelet.yaml
@@ -38,7 +38,7 @@ jobs:
         displayName: Install Rust
       - bash: edgelet/build/linux/check-submodules.sh
         displayName: Check submodules
-      - bash: edgelet/build/linux/build.sh
+      - bash: scripts/linux/generic-rust-build.sh --build-target edgelet
         displayName: Build
       - bash: edgelet/build/linux/build-k8s.sh
         displayName: Build (runtime-kubernetes)
