--- a/builds/ci/edgelet.yaml
+++ b/builds/ci/edgelet.yaml
@@ -28,7 +28,7 @@ jobs:
       - task: Bash@3
         displayName: Build
         inputs:
-          filePath: edgelet/build/linux/build.sh
+          filePath: scripts/linux/generic-rust-build.sh --build-target edgelet
       - task: Bash@3
         displayName: Test
         inputs:
