add logic for stripping to reduce executable size

--- a/mqtt/mqttd/Makefile
+++ b/mqtt/mqttd/Makefile
@@ -1,6 +1,7 @@
 TARGET=target/release
 CARGOFLAGS=--manifest-path=$(SRCDIR)/Cargo.toml
 CARGO=cargo
+STRIP_COMMAND=strip
 SRCDIR?=.
 
 all:
@@ -8,6 +9,7 @@ all:
 
 release:
 	$(CARGO) build $(CARGOFLAGS) --release -p mqttd
+	$(STRIP_COMMAND) $(TARGET)/mqttd
 
 clean:
 	rm -rf $(TARGET)
