--- a/edge-hub/watchdog/Makefile
+++ b/edge-hub/watchdog/Makefile
@@ -1,6 +1,7 @@
 TARGET=target/release
 CARGOFLAGS=--manifest-path=$(SRCDIR)/Cargo.toml
 CARGO=cargo
+STRIP_COMMAND=strip
 SRCDIR?=.
 
 all:
@@ -8,6 +9,7 @@ all:
 
 release:
 	$(CARGO) build $(CARGOFLAGS) --release -p watchdog
+	$(STRIP_COMMAND) $(TARGET)/watchdog
 
 clean:
 	rm -rf $(TARGET)
