missing / failing build

--- a/mqtt/mqttd/Makefile
+++ b/mqtt/mqttd/Makefile
@@ -9,7 +9,7 @@ all:
 
 release:
 	$(CARGO) build $(CARGOFLAGS) --release -p mqttd
-	$(STRIP_COMMAND) ..$(TARGET)/mqttd
+	$(STRIP_COMMAND) ../$(TARGET)/mqttd
 
 clean:
 	rm -rf ../$(TARGET)
