--- a/builds/checkin/mqtt.yaml
+++ b/builds/checkin/mqtt.yaml
@@ -36,8 +36,10 @@ jobs:
         displayName: Set env variables
       - bash: mqtt/build/linux/install.sh
         displayName: Install Rust
-      - bash: scripts/linux/generic-rust-build.sh --build-target mqtt
-        displayName: Build
+      - bash: scripts/linux/generic-rust-build.sh --project-root "mqtt" --packages "mqttd/Cargo.toml" --manifest-path --no-default-features
+        displayName: Build with no default features
+      - bash: scripts/linux/generic-rust-build.sh --project-root "mqtt" --packages "mqttd/Cargo.toml" --manifest-path
+        displayName: Build with default features
       - bash: mqtt/build/linux/test.sh
         displayName: Test
 
