New Build Images pipeline to support packaged edgehub (#3185)

--- a/edge-hub/docker/linux/amd64/Dockerfile
+++ b/edge-hub/docker/linux/amd64/Dockerfile
@@ -3,7 +3,11 @@ FROM azureiotedge/azureiotedge-runtime-base:1.2-linux-amd64 as builder
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:${base_tag}
 
-ARG EXE_DIR=.	
+ADD ./watchdog/target/x86_64-unknown-linux-musl/release/watchdog /usr/local/bin/watchdog
+ADD ./mqttd/target/x86_64-unknown-linux-musl/release/mqttd /usr/local/bin/mqttd
+ADD ./mqttd/production.json /app/mqttd/production.json
+
+ARG EXE_DIR=./Microsoft.Azure.Devices.Edge.Hub.Service
 
 # RocksDB requires snappy	
 RUN apk update && \	
@@ -22,14 +26,19 @@ COPY --from=builder publish/* /usr/local/lib/
 
 WORKDIR /app	
 
-COPY $EXE_DIR/ ./	
+COPY $EXE_DIR/ ./
+
+# Set broker log level
+ENV RUST_LOG=info
 
 # Expose MQTT, AMQP and HTTPS ports	
+EXPOSE 1883/tcp
 EXPOSE 8883/tcp	
 EXPOSE 5671/tcp	
 EXPOSE 443/tcp	
 
 USER edgehubuser	
 
-CMD echo "$(date --utc +"%Y-%m-%d %H:%M:%S %:z") Starting Edge Hub" && \	
-    exec /usr/bin/dotnet Microsoft.Azure.Devices.Edge.Hub.Service.dll
+CMD echo "$(date --utc +"%Y-%m-%d %H:%M:%S %:z") Starting Edge Hub" && \
+    cd /tmp && \
+    /usr/local/bin/watchdog
