--- a/builds/checkin/watchdog.yaml
+++ b/builds/checkin/watchdog.yaml
@@ -9,13 +9,13 @@ jobs:
 
   ################################################################################
   - job: check_run_pipeline
-    ################################################################################
+  ################################################################################
     displayName: Check pipeline preconditions (changes ARE in builds or edge hub)
     pool:
       vmImage: "ubuntu-16.04"
     steps:
       - bash: |
-          git log -m -1 --name-only --first-parent --pretty="" | egrep -i '^(builds|edge-hub)'
+          git log -m -1 --name-only --first-parent --pretty="" | egrep -i '^(builds|edge-hub/watchdog)'
           if [[ $? == 0 ]]; then
             echo "Detected changes inside builds or edgehub folders"
             echo "##vso[task.setvariable variable=RUN_PIPELINE;isOutput=true]TRUE"
@@ -25,7 +25,7 @@ jobs:
 
   ################################################################################
   - job: linux_amd64
-    ################################################################################
+  ################################################################################
     displayName: Linux amd64
     dependsOn: check_run_pipeline
     condition: eq(dependencies.check_run_pipeline.outputs['check_files.RUN_PIPELINE'], 'true')
@@ -43,7 +43,7 @@ jobs:
 
   ################################################################################
   - job: style_check
-    ################################################################################
+  ################################################################################
     displayName: Style Check
     dependsOn: check_run_pipeline
     condition: eq(dependencies.check_run_pipeline.outputs['check_files.RUN_PIPELINE'], 'true')
